syntax = "proto3";

option csharp_namespace = "CartDiscount.Grpc";

package cartdiscount;

// The discount service definition.
service CartDiscountProtoService {
	// Discount CRUD Operations
	rpc GetCartDiscount (GetCartDiscountRequest) returns (CartCouponModel);
	rpc CreateCartDiscount (CreateCartDiscountRequest) returns (CartCouponModel);
	rpc UpdateCartDiscount (UpdateCartDiscountRequest) returns (CartCouponModel);
	rpc DeleteCartDiscount (DeleteCartDiscountRequest) returns (DeleteCartDiscountResponse);
}

message GetCartDiscountRequest {
	string couponCode = 1;
}

message CartCouponModel {
	int32 id = 1;
	string couponCode = 2;
	string description = 3;
	int32 discountRate = 4;
}

message CreateCartDiscountRequest {
	CartCouponModel coupon = 1;
}

message UpdateCartDiscountRequest {
	CartCouponModel coupon = 1;
}

message DeleteCartDiscountRequest {
	string couponCode = 1;
}

message DeleteCartDiscountResponse {
	bool success = 1;
}